Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -118,8 +118,14 @@ nav{
         margin-left: -12.5%;
     }
     .backgroundCBR{
-        
         height: 1000px;
+    }
+
+    .parentImg .logo-text span{
+        width: 95%;
+    }
+    .parentImg .logo-text .logoInBody{
+        width: 45%;
     }
 }
 
@@ -269,7 +275,7 @@ html{
     letter-spacing: 10px;
     font-size: 30px;
     text-align: left;
-    padding-left: 20%;
+    padding-left: 25%;
     padding-right: 30%;
     text-transform: uppercase;
     margin-top: auto;
